Adding unit and integration tests to dremio-stress (#40)
* fixed null header handling for http client calls
* extract stress test reporting logic to StressReporter class
* extract monitoring to StressMonitor
* added many tests to get test coverage to 60%